--- a/margin-and-padding/01-margin-and-padding-1/style.css
+++ b/margin-and-padding/01-margin-and-padding-1/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
 body {
   max-width: 600px;
   margin: 0 auto;
@@ -7,8 +12,8 @@ body {
   background: pink;
   border: 3px solid blue;
   /* CHANGE ME */
-  padding: 0px;
-  margin: 0px;
+  padding: 30px;
+  margin: 10px;
 }
 
 .two {
@@ -21,8 +26,9 @@ body {
 .three {
   background: peachpuff;
   border: 3px solid brown;
-  width: 200px;
+  width: 300px;
   /* CHANGE ME */
-  padding: 0px;
-  margin-left: 0px;
+  padding: 30px;
+  margin-left: 300px;
+  margin-top: 50px;
 }
